// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Clickable/> snapshot - default props 1`] = `
<div
  className="container"
  onClick={[Function]}
>
  ...
</div>
`;

exports[`<Clickable/> snapshot - with TEXT 1`] = `
<div
  className="container"
  onClick={[Function]}
>
  TEXT
</div>
`;
